Thu Feb 27 15:58:31 MET 1997   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Updated version number

	Added VERSION identification

	Allow build with perl5.003, which is ante perlIO time

Mon Jan 13 17:53:18 MET 1997   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Random code fixes.

Wed Jan 22 15:19:56 MET 1997   Raphael Manfredi <Raphael_Manfredi@grenoble.hp.com>

. Description:

	Updated version number in Makefile.PL.

	Added "thanks to" section to README.

	Documented new forgive_me variable.

	Made 64-bit clean.

	Added forgive_me support to allow store() of data structures
	containing non-storable items like CODE refs.
