@@ -1,4 +1,4 @@
-# $Id: Makefile.PL,v 0.4.1.3 1997/02/27 14:57:31 ram Exp $
+# $Id: Makefile.PL,v 0.4.1.4 1997/02/27 15:31:04 ram Exp $
 #
 #  Copyright (c) 1995-1997, Raphael Manfredi
 #  
@@ -6,6 +6,9 @@
 #  as specified in the README file that comes with the distribution.
 #
 # $Log: Makefile.PL,v $
+# Revision 0.4.1.4  1997/02/27  15:31:04  ram
+# patch4: updated version number
+#
 # Revision 0.4.1.3  1997/02/27  14:57:31  ram
 # patch3: updated version number
 #
@@ -22,7 +25,7 @@
 use ExtUtils::MakeMaker;
 use Config;
 
-$Version = '0.4_03';
+$Version = '0.4_04';
 
 WriteMakefile(
     'NAME'     => 'Storable',
